--- a/2.html
+++ b/2.html
@@ -4,14 +4,20 @@
 
 		<title>Web site - test</title>
 		<meta charset="utf-8">
+		<style>
+			a {
+				color : black;
+				text-decoration: none;
+			}
 
+		</style>
 	</head>
 
 	<body>
-		<h1><a href="index.html">WEB - CSS</a></h1>
+		<h1><a href="index.html">WEB</a></h1>
 		<ol>
 			<li><a href="1.html">HTML</a></li>
-			<li><a href="2.html">CSS</a></li>
+			<li><a href="2.html" style="color: red; text-decoration: none;">CSS</a></li>
 			<li><a href="3.html">JAVESCRIPT</a></li>
 		</ol>
 
