--- a/3.html
+++ b/3.html
@@ -4,15 +4,21 @@
 
 		<title>Web site - test</title>
 		<meta charset="utf-8">
+		<style>
+			a {
+				color : black;
+				text-decoration: none;
+			}
 
+		</style>
 	</head>
 
 	<body>
-		<h1><a href="index.html">WEB - JAVASCRIPT</a></h1>
+		<h1><a href="index.html">WEB</a></h1>
 		<ol>
 			<li><a href="1.html">HTML</a></li>
 			<li><a href="2.html">CSS</a></li>
-			<li><a href="3.html">JAVESCRIPT</a></li>
+			<li><a href="3.html" style="color: red; text-decoration: none;" >JAVESCRIPT</a></li>
 		</ol>
 
 		<h2><a href = "https://www.w3schools.com/js" target="_blank" title="JAVASCRIPT specification">JAVASCRIPT란 무엇인가?</a></h2>
